--- a/ondulees.html
+++ b/ondulees.html
@@ -31,12 +31,12 @@
 <h2>Plaques Ondulées</h2>
 <div class="product-grid">
 <div class="product-card">
-<img alt="Petite Ondulée" src="images/petite_ondulée.jpeg"/>
+<img alt="Petite Ondulée" src="images/petite_ondulee.jpeg"/>
 <h3>Petite Ondulée</h3>
 <p>Grammage : 300–600 g/m². Usage abris, ateliers, bâtiments légers. Transmission lumineuse.</p>
 </div>
 <div class="product-card">
-<img alt="Grande Ondulée" src="images/grande_ondulée.jpeg"/>
+<img alt="Grande Ondulée" src="images/grande_ondulee.jpeg"/>
 <h3>Grande Ondulée</h3>
 <p>Grammage : 400–600 g/m². Usage couvertures industrielles, hangars agricoles. Solides et durables.</p>
 </div>
