--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <a href="nervurees.html" class="btn-primary">Voir les modèles</a>
         </div>
         <div class="product-card">
-          <img src="images/petite_ondulée.jpeg" alt="Plaques ondulées">
+          <img src="images/petite_ondulee.jpeg" alt="Plaques ondulées">
           <h3>Plaques Ondulées</h3>
           <p>Légères et faciles à poser, elles offrent une excellente transmission lumineuse.</p>
           <a href="ondulees.html" class="btn-primary">Voir les modèles</a>
