--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <li><a href="index.html#produits">Produits</a></li>
           <li><a href="#about">À propos</a></li>
           <li><a href="#contact">Contact</a></li>
+            <li><a href="catalogue.html">Catalogue</a></li>
         </ul>
       </nav>
       <button class="menu-toggle" aria-label="Menu mobile">☰</button>
@@ -46,7 +47,7 @@
           <a href="nervurees.html" class="btn-primary">Voir les modèles</a>
         </div>
         <div class="product-card">
-          <img src="images/petite_ondulee.jpeg" alt="Plaques ondulées">
+          <img src="images/petite_ondulée.jpeg" alt="Plaques ondulées">
           <h3>Plaques Ondulées</h3>
           <p>Légères et faciles à poser, elles offrent une excellente transmission lumineuse.</p>
           <a href="ondulees.html" class="btn-primary">Voir les modèles</a>
@@ -72,13 +73,15 @@
   <li>Durabilité face aux intempéries, UV et corrosion</li>
   <li>Adaptabilité : large choix de profils, grammages et usages</li>
   <li>Réactivité et accompagnement personnalisé</li>
-</ul>
+    <li><a href="catalogue.html">Catalogue</a></li>
+        </ul>
 <h3>Nos applications</h3>
 <ul>
   <li>Toitures et bardages industriels</li>
   <li>Serres agricoles et bâtiments d’élevage</li>
   <li>Hangars, abris et structures modulaires</li>
-</ul>
+    <li><a href="catalogue.html">Catalogue</a></li>
+        </ul>
 
     </div>
   </section>
