--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Propoly Industry — Accueil</title>
   <link rel="stylesheet" href="styles.css">
+  <meta property="og:title" content="Propoly Industry">
+  <meta property="og:description" content="Découvrez nos solutions durables en plaques polyester haute performance.">
+  <meta property="og:image" content="https://propolyindustry.com/images/logo.jpeg">
+  <meta property="og:url" content="https://propolyindustry.com">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Propoly Industry">
+  <meta name="twitter:description" content="Découvrez nos solutions durables en plaques polyester haute performance.">
+  <meta name="twitter:image" content="https://propolyindustry.com/images/logo.jpeg">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script defer src="scripts.js"></script>
 </head>
